fixing h3 align

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -61,6 +61,10 @@ body, h2, h3, h1 {
   background-color: #FAF2E4;
 }
 
+h3 {
+  text-align: center;
+}
+
 h1, a {
   font-size: 60px;
   color: #005236;
